# adapt-jingo

./: .gitignore  LICENSE  README.md
adapt-integration/: INTEGRATION.md
adapt-integration/files/: package.json
adapt-integration/patches/: 0001-feat-import-libretexts-import-language-pack-artisan-.patch  0002-fix-import-assessment_type-uses-real-time-delayed-no.patch  0003-fix-db-restore-questions.technology-to-VARCHAR-15-in.patch  0004-feat-pronunciation-custom-recorder-with-auto-stop-VA.patch  0005-fix-pronunciation-seed-per-course-defaults-in-import.patch  0006-fix-pronunciation-make-import-section-enrollment-ide.patch  0007-feat-pronunciation-show-per-phoneme-score-breakdown-.patch  0008-feat-pronunciation-learner-friendly-phoneme-chip-lab.patch  0009-feat-pronunciation-instructor-preview-of-the-recorde.patch  0010-fix-pronunciation-ImportLanguagePack-creates-assign_.patch  0011-feat-pronunciation-Hear-it-exemplar-button-target-wo.patch  (+5 more)
authoring/: README.md  augment_spanish_pack.py  gen_word_records.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md
engine/: NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
engine/src/jingo_engine/: __init__.py  calibration.py  contract.py  engine.py  gop.py  gop_sa.py  model_assets.py
engine/src/jingo_engine/assets/: calibration-v1.json  model-manifest.json
model/: README.md
service/: Dockerfile  README.md  docker-compose.example.yml  requirements-build.txt  requirements.txt
service/app/: audio.py  config.py  (+3 more)
tts/: .gitignore  Dockerfile  README.md  docker-compose.example.yml  requirements.txt
(+55 files in other folders)
